# TestingRepo

./: .gitignore  .gitlab-ci.yml  TestWithFixtures.cpp  TestWithFixtures.h  cmake_test.cpp  my_first_function.h  test.cpp
.github/workflows/: pythonapp.yml
CppTesting/: .gitignore  CMakeLists.txt  main.cpp  my_first_function.cpp
CppTesting/00-start-test/: CMakeLists.txt  TestAdd.cpp  TestAdd.h
CppTesting/01-set-up-tear-down/: CMakeLists.txt  TestWithFixtures.cpp  TestWithFixtures.h
CppTesting/02-testing-singleton/: CMakeLists.txt  MockSingleton.cpp  MockSingleton.h  Singleton.cpp  Singleton.h  main.cpp  run_tests.cpp
CppTesting/03-mock-example/: CMakeLists.txt  Dumper.cpp  Dumper.h  MockDumper.cpp  MockDumper.h  main.cpp
CppTesting/simple-test/: CMakeLists.txt  my_first_function.cpp
PythonTesting/00-unittest/: .gitignore  README.md  TreeUnitTest.py
PythonTesting/testing_examples/: README.md  TreeOpener.py  requirements.txt
PythonTesting/testing_examples/.pytest_cache/v/cache/: nodeids
PythonTesting/testing_examples/01-unittest/: TreeCreatorUnitTest.py  TreeUnitTest.py
PythonTesting/testing_examples/02-pytest/: pytest_scopes.py  pytest_tests.py  test_pytest_scopes.py
PythonTesting/testing_examples/03-mock-testing/: ml_save_pipeline.py  simple_example.py  test_ml_pipeline.py  tests.py
SeleniumTesting/: main.py  requirements.txt
SeleniumTesting/templates/: index.html
SeleniumTesting/tests/: test_flask.py  test_selenium.py
